tests/NormalTests/paczka1/fuzzy1/71875362.err
Error in line 7: wZ3gSicYdD A683 95,6
Error in line 6: kWbwMt A877 43,3
Error in line 4: tllm A683 31,1
Error in line 12: kWbwMt A661 7,8
Error in line 23: IY9uw2 A877 60,2
Error in line 22: wZ3gSicYdD A877 98,3
Error in line 34: wZ3gSicYdD A28 27,6
